# panel

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile.toml  Procfile  README.md  app.go  bun.lockb  cliff.toml  components.json  default.nix  docker-compose.yml  eslint.config.js  flake.nix  go.mod  go.sum  gomod2nix.toml  index.html  main.go  package.json  panel.yml  shell.nix  snapcraft.yaml  tailwind.config.cjs  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.js  wails.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-only.yml  ci.yml
config/: acquisition_config.go  app_config.go  config.go  connection_config.go  layout_config.go  logging_config.go
examples/simple/: dashboard.conf.json  panel.conf.json
examples/simple/scripts/: logging.rhai
frontend/: eslint.config.js  index.html  package-lock.json  package.json  package.json.md5  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx  style.css
frontend/src/components/: ErrorPage.tsx  Navbar.tsx  ProjectList.tsx  Tooltip.tsx  index.ts
frontend/wailsjs/go/: models.ts
schema/: panel.schema.json
snapcraft/: README.md
src/: App.tsx  main.tsx  mdx.d.ts  style.css
src-tauri/: Cargo.toml  build.rs  diesel.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/panel-macro/: Cargo.toml
src-tauri/crates/panel-macro/src/: lib.rs  readable.rs
src-tauri/fixtures/: project.yml
src-tauri/migrations/2024-12-15-005256_create_dashboards/: down.sql  up.sql
src-tauri/migrations/2024-12-30-170313_create_components_and_variables/: down.sql  up.sql
src-tauri/migrations/2025-01-04-185649_create_projects/: down.sql  up.sql
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  schema.rs
src-tauri/src/app/: commands.rs  event.rs  mod.rs
src-tauri/src/db/: fixtures.rs  mod.rs
src-tauri/src/db/models/: dashboard.rs  mod.rs  project.rs  variable.rs
src-tauri/src/db/models/components/: generated.rs
src-tauri/src/db/models/dashboards/: generated.rs
src-tauri/src/db/models/variables/: generated.rs
src-tauri/src/db/repositories/: dashboard.rs  mod.rs  project.rs  variable.rs
src-tauri/src/repositories/: mod.rs  project.rs  variable.rs
src-tauri/src/server/: handlers.rs  mod.rs  state.rs
src-tauri/src/server/handlers/: dashboard.rs  mod.rs  user.rs
src-tauri/src/types/: dashboard.rs
src-tauri/src/utils/: test_helpers.rs
src/components/: index.ts  layout.tsx  loader.tsx  mode-toggle.tsx
src/components/context/: database-provider.test.tsx  database-provider.tsx  machine-provider.tsx  theme-provider.tsx
src/components/dashboard/: index.ts  panel.tsx  range.tsx  stack.tsx  stat.css  stat.tsx  text.tsx
src/components/layout/: layout.tsx  root-layout.tsx
src/components/ui/: button.tsx  dropdown-menu.tsx
src/components/user-table/: columns.tsx  data-table.tsx  index.ts
src/features/components/: page.tsx
src/features/documentation/: page.tsx
src/features/error/: page.tsx
src/features/home/: page.tsx
src/features/project/: create.tsx  index.ts  page.tsx
src/features/users/: page.tsx
src/lib/factories/: dashboard.tsx
src/test/: setup.ts
(+42 files in other folders)
