[package]
name = "panel"
version = "0.1.1"
description = "Panel"
authors = ["Geoff Johnson <geoff.jay@gmail.com>"]
edition = "2021"
default-run = "panel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "panel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
axum-test = "16.4.0"
diesel = { version = "2.2.0", features = [
    "serde_json",
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2.2.0"
http = "1.2.0"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["custom-protocol", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tokio = "1.42.0"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors"] }
panel_macro = { path = "crates/panel-macro" }
tauri-plugin-dialog = "2"

[target.'cfg(windows)'.dependencies]
libsqlite3-sys = { version = ">=0.17.2, <0.26.0", features = ["bundled"] }

[dev-dependencies]
mockall = "0.13"

[profile.release]
incremental = false
codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true
